# miles

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  apply_branding.sh  config.py  data_storage.py  generate_icons.py  lint.sh  miles.py  pyproject.toml  requirements.txt  setup.sh  test_miles.py  tools.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
branding/: ICONS_NEEDED.md  README.md  custom.css
data/: system_instruction.md  user.json.example
docs/: DATA_API.md
tests/: TESTING.md  __init__.py  test_data_storage.py  test_miles.py  test_tools.py
